--- a/pytest.ini
+++ b/pytest.ini
@@ -2,5 +2,6 @@
 markers =
     authorization: Маркировка для тестов, связанных с авторизацией пользователей.
     courses: Маркировка для тестов, связанных с курсами.
+    dashboard: Маркировка для тестов, связанных с рабочей панелью.
     regression: Маркировка для регрессионных тестов.
     registration: Маркировка для тестов, связанных с регистрацией пользователей.
