Наращивание тестовой базы и рефакторинг. Практикуемся в написании автотестов с использованием Page Object, Page Component, Page Factory

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
+addopts = -s -v
 markers =
     authorization: Маркировка для тестов, связанных с авторизацией пользователей.
     courses: Маркировка для тестов, связанных с курсами.
